--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -2,4 +2,13 @@
 
 {% block body %}
 <h1>Bienvenue sur {{ website }}!</h1>
+
+    <a href="{{ path('wild_show', { 'slug': "walking-dead" }) }}">
+        Testing show() method from WildController with a real program s slug.
+    </a>
+    <br>
+    <a href="{{ path('wild_index') }}">
+        Testing index() method from WildController to view all programs.
+    </a>
+
 {% endblock %}
