--- a/templates/wild/show.html.twig
+++ b/templates/wild/show.html.twig
@@ -9,6 +9,8 @@
             <h1 class="mt-0">{{ program.title }}</h1>
             <p>{{ program.summary }}</p>
             <p>Categorie : {{ program.category.name }}</p>
+
+            <a href="#">Voir toutes les saisons de {{ program.title }}</a>
         </div>
     </div>
 
