--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -1,8 +1,8 @@
 .navbar {
-    background-color: var(--dark);
-}
+  background-color: var(--dark); }
 
 .profil-pic {
-    width: 2.5em;
-    height: 2.5em;
-}
+  width: 2.5em;
+  height: 2.5em; }
+
+/*# sourceMappingURL=nav.css.map */
