--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,13 +6,14 @@
     <meta charset="UTF-8">
     <title>{% block title %}Welcome!{% endblock %}</title>
     {% block stylesheets %}
+        <link href="https://fonts.googleapis.com/css?family=Orbitron|Syncopate|Abel&display=swap" rel="stylesheet">
         {{ encore_entry_link_tags('app') }}
     {% endblock %}
 </head>
 
 <header>
     {% block navbar %}
-        {% include "navbar.html.twig" %}
+        {% include "_navbar.html.twig" %}
     {% endblock %}
 </header>
 
