--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <h1>Bienvenue sur {{ website }}!</h1>
 
-    <a href="{{ path('wild_show', { 'slug': "walking-dead" }) }}">
+    <a href="{{ path('wild_show', { 'slug': "penny-dreadful" }) }}">
         Testing show() method from WildController with a real program's slug.
     </a>
     <br>
