--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6,8 +6,8 @@ Error: File to import not found or unreadable: ~bootstrap.
 2: @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 3: @import "nav";
 4: @import "program";
-5: 
-6: @mixin primary-title {
+5: @import "episodes";
+6: 
 
 Backtrace:
 app.scss:1
@@ -46,4 +46,4 @@ app.scss:1
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: File to import not found or unreadable: ~bootstrap.\A         on line 1 of app.scss\A \A 1: @import '~bootstrap';\A 2: @import '~@fortawesome/fontawesome-free/scss/fontawesome';\A 3: @import \"nav\";\A 4: @import \"program\";\A 5: \A 6: @mixin primary-title {"; }
+  content: "Error: File to import not found or unreadable: ~bootstrap.\A         on line 1 of app.scss\A \A 1: @import '~bootstrap';\A 2: @import '~@fortawesome/fontawesome-free/scss/fontawesome';\A 3: @import \"nav\";\A 4: @import \"program\";\A 5: @import \"episodes\";\A 6: "; }
