--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}Welcome!{% endblock %}</title>
     {% block stylesheets %}
-        <link href="https://fonts.googleapis.com/css?family=Orbitron|Syncopate|Abel&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Orbitron|Notable|Abel&display=swap" rel="stylesheet">
         {{ encore_entry_link_tags('app') }}
     {% endblock %}
 </head>
