--- a/templates/wild/episodes.html.twig
+++ b/templates/wild/episodes.html.twig
@@ -2,11 +2,14 @@
 
 {% block body %}
     <div class="container">
-        <h1>Saison {{ season.number }} de {{ program.title }}</h1>
+        <h1>Saison {{ season.number }} de <i>{{ program.title }}</i></h1>
+        <hr>
+        <p>{{ program.summary }}</p>
 
-        {% for episode in episodes %}
-            <h2>Episode {{ episode.number }}</h2>
-            <p>{{ episode.synopsis }}</p>
-        {% endfor %}
+        <div class="episodes">
+            {% for episode in episodes %}
+                <h2>Episode {{ episode.number }} : <i>{{ episode.title }}</i></h2>
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
