--- a/templates/wild/episodes.html.twig
+++ b/templates/wild/episodes.html.twig
@@ -11,5 +11,7 @@
                 <h2>Episode {{ episode.number }} : <i>{{ episode.title }}</i></h2>
             {% endfor %}
         </div>
+
+        <a class="btn" href="{{ path('show_program', {'programName': program.title }) }}">Retour</a>
     </div>
 {% endblock %}
