--- a/templates/wild/episodes.html.twig
+++ b/templates/wild/episodes.html.twig
@@ -8,7 +8,9 @@
 
         <div class="episodes">
             {% for episode in episodes %}
-                <h2>Episode {{ episode.number }} : <i>{{ episode.title }}</i></h2>
+                <a href="{{ path('show_episode', {'id': episode.id }) }}">
+                    <h2>Episode {{ episode.number }} : <i>{{ episode.title }}</i></h2>
+                </a>
             {% endfor %}
         </div>
 
