--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,17 +1,20 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-<h1>Bienvenue sur {{ website }}!</h1>
+    <div class="container">
+        <h1>Bienvenue sur {{ website }}!</h1>
 
-    <a href="{{ path('wild_show', { 'slug': "penny-dreadful" }) }}">
-        Testing show() method from WildController with a real program's slug.
-    </a>
-    <br>
-    <a href="{{ path('wild_index') }}">
-        Testing index() method from WildController to view all programs.
-    </a>
-    <br>
-    <a href="{{ path('show_category', {'categoryName': 'horreur'}) }}">
-        Testing findBy() method from WildController to view programs per category.
-    </a>
+        <a href="{{ path('wild_show', { 'slug': "penny-dreadful" }) }}">
+            Testing show() method from WildController with a real program's slug.
+        </a>
+        <br>
+        <a href="{{ path('wild_index') }}">
+            Testing index() method from WildController to view all programs.
+        </a>
+        <br>
+        <a href="{{ path('show_category', {'categoryName': 'horreur'}) }}">
+            Testing findBy() method from WildController to view programs per category.
+        </a>
+    </div>
+
 {% endblock %}
