--- a/templates/season/index.html.twig
+++ b/templates/season/index.html.twig
@@ -9,10 +9,10 @@
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Year</th>
+                <th>Année</th>
                 <th>Description</th>
-                <th>Number</th>
-                <th>actions</th>
+                <th>Episode</th>
+                <th>Admin</th>
             </tr>
         </thead>
         <tbody>
