--- a/templates/episode/index.html.twig
+++ b/templates/episode/index.html.twig
@@ -9,10 +9,10 @@
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Title</th>
-                <th>Number</th>
+                <th>Titre</th>
+                <th>Episode</th>
                 <th>Synopsis</th>
-                <th>actions</th>
+                <th>Admin</th>
             </tr>
         </thead>
         <tbody>
