--- a/templates/season/index.html.twig
+++ b/templates/season/index.html.twig
@@ -11,7 +11,7 @@
                 <th>Id</th>
                 <th>Année</th>
                 <th>Description</th>
-                <th>Episode</th>
+                <th>Saison</th>
                 <th>Admin</th>
             </tr>
         </thead>
