--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -35,5 +35,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('program_new') }}">Create new</a>
+    <a href="{{ path('program_new') }}" class="btn">Ajouter une série</a>
 {% endblock %}
