--- a/templates/program/_form.html.twig
+++ b/templates/program/_form.html.twig
@@ -1,4 +1,7 @@
-{{ form_start(form) }}
+<div class="container">
+    {% form_theme form 'bootstrap_4_layout.html.twig' %}
+    {{ form_start(form) }}
     {{ form_widget(form) }}
     <button class="btn">{{ button_label|default('Save') }}</button>
-{{ form_end(form) }}
+    {{ form_end(form) }}
+</div>
