--- a/templates/program/new.html.twig
+++ b/templates/program/new.html.twig
@@ -3,9 +3,9 @@
 {% block title %}New Program{% endblock %}
 
 {% block body %}
-    <h1>Create new Program</h1>
+    <h1>Ajouter une nouvelle série</h1>
 
     {{ include('program/_form.html.twig') }}
 
-    <a href="{{ path('program_index') }}">back to list</a>
+    <a href="{{ path('program_index') }}" class="btn">Retour</a>
 {% endblock %}
