--- a/templates/season/new.html.twig
+++ b/templates/season/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Season{% endblock %}
+{% block title %}Nouvelle saison{% endblock %}
 
 {% block body %}
-    <h1>Create new Season</h1>
+    <h1>Ajouter une nouvelle saison</h1>
 
     {{ include('season/_form.html.twig') }}
 
-    <a href="{{ path('season_index') }}">back to list</a>
+    <a href="{{ path('season_index') }}" class="btn">Retour</a>
 {% endblock %}
