--- a/templates/season/index.html.twig
+++ b/templates/season/index.html.twig
@@ -35,5 +35,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('season_new') }}">Create new</a>
+    <a href="{{ path('season_new') }}" class="btn">Ajouter une saison</a>
 {% endblock %}
