--- a/templates/program/new.html.twig
+++ b/templates/program/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Program{% endblock %}
+{% block title %}Nouvelle série{% endblock %}
 
 {% block body %}
     <h1>Ajouter une nouvelle série</h1>
