--- a/templates/episode/new.html.twig
+++ b/templates/episode/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Episode{% endblock %}
+{% block title %}Nouvel Episode{% endblock %}
 
 {% block body %}
-    <h1>Create new Episode</h1>
+    <h1>Ajouter un nouvel épisode</h1>
 
     {{ include('episode/_form.html.twig') }}
 
-    <a href="{{ path('episode_index') }}">back to list</a>
+    <a href="{{ path('episode_index') }}" class="btn">Retour</a>
 {% endblock %}
