--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -7,7 +7,9 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('program_index') }}" aria-disabled="true">Toutes les séries</a>
+            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                    aria-haspopup="true" aria-expanded="false">
@@ -36,16 +38,16 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="#" aria-disabled="true">❤ Favoris</a>
+                <a class="nav-link" href="#" aria-disabled="true">❤ Favoris</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#" aria-disabled="true">Déconnexion</a>
+                    <a class="nav-link" href="#" aria-disabled="true">Déconnexion</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#" aria-disabled="true">Jane Doe</a>
+                    <a class="nav-link" href="#" aria-disabled="true">Jane Doe</a>
                 </li>
                 <li class="nav-item">
                     <img src="https://www.paroissesaintcyrlecole.fr/wp-content/uploads/2018/10/female-default-profile.png"
