--- a/templates/wild/program.html.twig
+++ b/templates/wild/program.html.twig
@@ -22,6 +22,16 @@
                            href="{{ path('show_season', {'id': season.id }) }}">Saison {{ season.number }}</a>
                     </div>
                 {% endfor %}
+
+                <strong>Acteur :</strong>
+                <ul>
+                    {% for actor in program.actors %}
+                        <li><a href="{{ path('actor_show', {'id':actor.id}) }}">{{ actor.name }}</a> </li>
+                    {% else %}
+                        <li>Aucun acteur pour cette série</li>
+                    {% endfor %}
+                </ul>
+
             </div>
         </div>
     </div>
