--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -3,6 +3,7 @@
 @import "nav";
 @import "program";
 @import "episodes";
+@import "actor";
 
 @mixin primary-title {
     font-family: 'Orbitron', sans-serif;
@@ -59,6 +60,11 @@ h3 {
     background-color: var(--secondary);
 }
 
+a {
+    color:var(--primary);
+}
+
 a:hover {
-    text-decoration:underline var(--secondary);
+    color:var(--secondary);
+    text-decoration:underline var(--primary);
 }
