--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -23,8 +23,8 @@
                 <td>{{ program.title }}</td>
                 <td>{{ program.summary }}</td>
                 <td>
-                    <a href="{{ path('program_show', {'id': program.id}) }}">show</a>
-                    <a href="{{ path('program_edit', {'id': program.id}) }}">edit</a>
+                    <a href="{{ path('program_show', {'slug': program.slug }) }}">show</a>
+                    <a href="{{ path('program_edit', {'slug': program.slug }) }}">edit</a>
                 </td>
             </tr>
         {% else %}
