--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -41,7 +41,7 @@
 
     <a href="{{ path('program_index') }}" class="btn">Retour</a>
 
-    <a href="{{ path('program_edit', {'id': program.id}) }}" class="btn">Modifier</a>
+    <a href="{{ path('program_edit', {'slug': program.slug }) }}" class="btn">Modifier</a>
 
     {{ include('program/_delete_form.html.twig') }}
 {% endblock %}
