--- a/templates/actor/show.html.twig
+++ b/templates/actor/show.html.twig
@@ -1,6 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Actor{% endblock %}
+
 {% block body %}
+
     <div class="container">
         <h1>{{ actor.name }}</h1>
         <p>A joué dans :</p>
@@ -8,7 +11,8 @@
         <div class="programs">
 
             {% for program in programs %}
-                <a class="card"  href="{{ path('show_program', {'programName': program.title }) }}" style="width: 18rem;">
+                <a class="card" href="{{ path('show_program', {'slug': program.slug }) }}"
+                   style="width: 18rem;">
                     <img src="{{ program.poster }}" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h2>{{ program.title }}</h2>
@@ -19,5 +23,9 @@
         </div>
     </div>
 
+    <a href="{{ path('actor_index') }}">back to list</a>
 
+    <a href="{{ path('actor_edit', {'slug': actor.slug}) }}">edit</a>
+
+    {{ include('actor/_delete_form.html.twig') }}
 {% endblock %}
