--- a/templates/wild/program.html.twig
+++ b/templates/wild/program.html.twig
@@ -19,14 +19,14 @@
                 {% for season in seasons %}
                     <div class="seasons">
                         <a class="btn" role="button"
-                           href="{{ path('show_season', {'id': season.id }) }}">Saison {{ season.number }}</a>
+                           href="{{ path('show_season', {'slug': season.slug }) }}">Saison {{ season.number }}</a>
                     </div>
                 {% endfor %}
 
                 <strong>Acteur :</strong>
                 <ul>
                     {% for actor in program.actors %}
-                        <li><a href="{{ path('actor_show', {'id':actor.id}) }}">{{ actor.name }}</a> </li>
+                        <li><a href="{{ path('actor_show', {'slug':actor.slug}) }}">{{ actor.name }}</a> </li>
                     {% else %}
                         <li>Aucun acteur pour cette série</li>
                     {% endfor %}
