--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -10,32 +10,14 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('program_index') }}" aria-disabled="true">Toutes les séries</a>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    Catégories
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Catégorie 1</a>
-                    <a class="dropdown-item" href="#">Catégorie 2</a>
-                    <a class="dropdown-item" href="#">Catégorie 3</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Voir toutes les catégories</a>
-                </div>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('season_index') }}" aria-disabled="true">Toutes les saisons</a>
             </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    Acteurs
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Acteur/trice 1</a>
-                    <a class="dropdown-item" href="#">Acteur/trice 1</a>
-                    <a class="dropdown-item" href="#">Acteur/trice 1</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Voir tous les acteurs</a>
-                </div>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('episode_index') }}" aria-disabled="true">Tous les épisodes</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('actor_index') }}" aria-disabled="true">Tous les acteurs</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#" aria-disabled="true">❤ Favoris</a>
