--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -28,7 +28,7 @@
             <td>
                 <ul>
                     {% for actor in program.actors %}
-                        <li>{{ actor.name }} </li>
+                        <li><a href="{{ path('actor_show', {'slug':actor.slug}) }}">{{ actor.name }}</a></li>
                     {% else %}
                         <li>Aucun acteur pour cette série</li>
                     {% endfor %}
