--- a/templates/episode/new.html.twig
+++ b/templates/episode/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('episode/_form.html.twig') }}
 
-    <a href="{{ path('episode_index') }}" class="btn">Retour</a>
+    <a href="{{ path('episode_index') }}" class="btn">Retour à la liste des épisodes</a>
 {% endblock %}
