--- a/templates/episode/edit.html.twig
+++ b/templates/episode/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Episode{% endblock %}
+{% block title %}Modifier un Épisode{% endblock %}
 
 {% block body %}
-    <h1>Edit Episode</h1>
+    <h1>Modifier un Épisode</h1>
 
     {{ include('episode/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('episode_index') }}">back to list</a>
+    <a href="{{ path('episode_index') }}" class="btn">Retour à la liste des épisodes</a>
 
     {{ include('episode/_delete_form.html.twig') }}
 {% endblock %}
