--- a/templates/episode/show.html.twig
+++ b/templates/episode/show.html.twig
@@ -8,8 +8,8 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ episode.id }}</td>
+                <th></th>
+                <td>{{ loop.index }}</td>
             </tr>
             <tr>
                 <th>Title</th>
@@ -26,9 +26,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('episode_index') }}">back to list</a>
+    <a href="{{ path('episode_index') }}" class="active">Retour à la liste des épisiodes</a>
 
-    <a href="{{ path('episode_edit', {'slug': episode.slug}) }}">edit</a>
+    <a href="{{ path('episode_edit', {'slug': episode.slug}) }}">Modifier</a>
 
     {{ include('episode/_delete_form.html.twig') }}
 {% endblock %}
