--- a/templates/episode/show.html.twig
+++ b/templates/episode/show.html.twig
@@ -8,8 +8,8 @@
     <table class="table">
         <tbody>
             <tr>
-                <th></th>
-                <td>{{ loop.index }}</td>
+                <th>Id</th>
+                <td>{{ episode.id }}</td>
             </tr>
             <tr>
                 <th>Title</th>
