--- a/templates/program/edit.html.twig
+++ b/templates/program/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Program{% endblock %}
+{% block title %}Modifier une série{% endblock %}
 
 {% block body %}
-    <h1>Edit Program</h1>
+    <h1>Modifier une série</h1>
 
-    {{ include('program/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('program/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-    <a href="{{ path('program_index') }}">back to list</a>
+    <a href="{{ path('program_index') }}" class="btn">Retour</a>
 
     {{ include('program/_delete_form.html.twig') }}
 {% endblock %}
