--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -1,19 +1,21 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Program index{% endblock %}
+{% block title %}Séries{% endblock %}
 
 {% block body %}
-    <h1>Program index</h1>
+    <h1>Toutes les séries</h1>
+
+    <a href="{{ path('program_new') }}" class="btn">Ajouter une série</a>
 
     <table class="table">
         <thead>
-            <tr>
-                <th></th>
-                <th>Affiche</th>
-                <th>Titre</th>
-                <th>Résumé</th>
-                <th>Admin</th>
-            </tr>
+        <tr>
+            <th></th>
+            <th>Affiche</th>
+            <th>Titre</th>
+            <th>Résumé</th>
+            <th>Admin</th>
+        </tr>
         </thead>
         <tbody>
         {% for program in programs %}
@@ -23,17 +25,15 @@
                 <td>{{ program.title }}</td>
                 <td>{{ program.summary }}</td>
                 <td>
-                    <a href="{{ path('program_show', {'slug': program.slug }) }}">show</a>
-                    <a href="{{ path('program_edit', {'slug': program.slug }) }}">edit</a>
+                    <a href="{{ path('program_show', {'slug': program.slug }) }}" class="btn">Détails</a>
+                    <a href="{{ path('program_edit', {'slug': program.slug }) }}" class="btn">Modifier</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="5">no records found</td>
+                <td colspan="5">Aucune série enregistrée</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('program_new') }}" class="btn">Ajouter une série</a>
 {% endblock %}
