--- a/templates/actor/show.html.twig
+++ b/templates/actor/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Actor{% endblock %}
+{% block title %}{{ actor.name }}{% endblock %}
 
 {% block body %}
 
