--- a/templates/episode/show.html.twig
+++ b/templates/episode/show.html.twig
@@ -8,11 +8,11 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>Title</th>
+                <th>Titre</th>
                 <td>{{ episode.title }}</td>
             </tr>
             <tr>
-                <th>Number</th>
+                <th>Episode n°</th>
                 <td>{{ episode.number }}</td>
             </tr>
             <tr>
