--- a/templates/actor/edit.html.twig
+++ b/templates/actor/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Modifier un acteur</h1>
 
-    {{ include('actor/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('actor/_form.html.twig', {'button_label': 'Modifier'}) }}
 
     <a href="{{ path('actor_index') }}" class="btn">Retour à la liste des acteurs</a>
 
