--- a/templates/episode/index.html.twig
+++ b/templates/episode/index.html.twig
@@ -1,30 +1,30 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Episode index{% endblock %}
+{% block title %}Episodes{% endblock %}
 
 {% block body %}
-    <h1>Episodes</h1>
+    <h1>Tous les épisodes</h1>
+
+    <a href="{{ path('episode_new') }}" class="btn">Ajouter un épisode</a>
 
     <table class="table">
         <thead>
-            <tr>
-                <th></th>
-                <th>Titre</th>
-                <th>Episode</th>
-                <th>Synopsis</th>
-                <th>Admin</th>
-            </tr>
+        <tr>
+            <th>Episode</th>
+            <th>Titre</th>
+            <th>Synopsis</th>
+            <th>Admin</th>
+        </tr>
         </thead>
         <tbody>
         {% for episode in episodes %}
             <tr>
-                <td>{{ loop.index }}</td>
-                <td>{{ episode.title }}</td>
                 <td>{{ episode.number }}</td>
+                <td>{{ episode.title }}</td>
                 <td>{{ episode.synopsis }}</td>
                 <td>
-                    <a href="{{ path('episode_show', {'slug': episode.slug}) }}">show</a>
-                    <a href="{{ path('episode_edit', {'slug': episode.slug}) }}">edit</a>
+                    <a href="{{ path('episode_show', {'slug': episode.slug}) }}" class="btn">Détails</a>
+                    <a href="{{ path('episode_edit', {'slug': episode.slug}) }}" class="btn">Modifier</a>
                 </td>
             </tr>
         {% else %}
@@ -34,6 +34,4 @@
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('episode_new') }}" class="btn">Ajouter un épisode</a>
 {% endblock %}
