--- a/templates/season/edit.html.twig
+++ b/templates/season/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Season{% endblock %}
+{% block title %}Modifier une saison{% endblock %}
 
 {% block body %}
-    <h1>Edit Season</h1>
+    <h1>Modifier une saison</h1>
 
-    {{ include('season/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('season/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-    <a href="{{ path('season_index') }}">back to list</a>
+    <a href="{{ path('season_index') }}" class="btn">Retour</a>
 
     {{ include('season/_delete_form.html.twig') }}
 {% endblock %}
