--- a/templates/season/index.html.twig
+++ b/templates/season/index.html.twig
@@ -1,39 +1,37 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Season index{% endblock %}
+{% block title %}Saisons{% endblock %}
 
 {% block body %}
-    <h1>Season index</h1>
+    <h1>Toutes les saisons</h1>
+
+    <a href="{{ path('season_new') }}" class="btn">Ajouter une saison</a>
 
     <table class="table">
         <thead>
-            <tr>
-                <th>Id</th>
-                <th>Année</th>
-                <th>Description</th>
-                <th>Saison</th>
-                <th>Admin</th>
-            </tr>
+        <tr>
+            <th>Saison</th>
+            <th>Année</th>
+            <th>Description</th>
+            <th>Admin</th>
+        </tr>
         </thead>
         <tbody>
         {% for season in seasons %}
             <tr>
-                <td>{{ season.id }}</td>
+                <td>{{ season.number }}</td>
                 <td>{{ season.year }}</td>
                 <td>{{ season.description }}</td>
-                <td>{{ season.number }}</td>
                 <td>
-                    <a href="{{ path('season_show', {'id': season.id}) }}">show</a>
-                    <a href="{{ path('season_edit', {'id': season.id}) }}">edit</a>
+                    <a href="{{ path('season_show', {'id': season.id}) }}" class="btn">Détails</a>
+                    <a href="{{ path('season_edit', {'id': season.id}) }}" class="btn">Modifier</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="5">no records found</td>
+                <td colspan="5">Aucune saison enregistrée</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('season_new') }}" class="btn">Ajouter une saison</a>
 {% endblock %}
