--- a/templates/season/show.html.twig
+++ b/templates/season/show.html.twig
@@ -1,18 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Season{% endblock %}
+{% block title %}Saison{% endblock %}
 
 {% block body %}
-    <h1>Season</h1>
+    <h1>Saison</h1>
 
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ season.id }}</td>
-            </tr>
-            <tr>
-                <th>Year</th>
+                <th>Année</th>
                 <td>{{ season.year }}</td>
             </tr>
             <tr>
@@ -20,15 +16,15 @@
                 <td>{{ season.description }}</td>
             </tr>
             <tr>
-                <th>Number</th>
+                <th>Saison n°</th>
                 <td>{{ season.number }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('season_index') }}">back to list</a>
+    <a href="{{ path('season_index') }}" class="btn">Retour</a>
 
-    <a href="{{ path('season_edit', {'id': season.id}) }}">edit</a>
+    <a href="{{ path('season_edit', {'id': season.id}) }}" class="btn">Modifier</a>
 
     {{ include('season/_delete_form.html.twig') }}
 {% endblock %}
