--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -20,7 +20,7 @@
                 <a class="nav-link" href="{{ path('actor_index') }}" aria-disabled="true">Tous les acteurs</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" aria-disabled="true">❤ Favoris</a>
+                <a class="nav-link" href="#" aria-disabled="true"><i class="fas fa-heart"></i> Favoris</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
