--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,6 +1,9 @@
 @import '~bootstrap';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
+
 @import "nav";
+@import "home";
+
 @import "program";
 @import "episodes";
 @import "actor";
