--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -12,6 +12,10 @@
             <td>{{ program.title }}</td>
         </tr>
         <tr>
+            <th>Catégorie</th>
+            <td>{{ program.category.name }}</td>
+        </tr>
+        <tr>
             <th>Résumé</th>
             <td>{{ program.summary }}</td>
         </tr>
