--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -26,13 +26,15 @@
         <tr>
             <th>Acteurs</th>
             <td>
-                <ul>
-                    {% for actor in program.actors %}
-                        <li><a href="{{ path('actor_show', {'slug':actor.slug}) }}">{{ actor.name }}</a></li>
-                    {% else %}
-                        <li>Aucun acteur pour cette série</li>
-                    {% endfor %}
-                </ul>
+                <div class="casting">
+                    <ul>
+                        {% for actor in program.actors %}
+                            <li><a href="{{ path('actor_show', {'slug':actor.slug}) }}">{{ actor.name }}</a></li>
+                        {% else %}
+                            <li>Aucun acteur pour cette série</li>
+                        {% endfor %}
+                    </ul>
+                </div>
             </td>
         </tr>
 
