--- a/templates/wild/program.html.twig
+++ b/templates/wild/program.html.twig
@@ -25,13 +25,15 @@
                 </div>
 
                 <h2>Casting</h2>
-                <ul>
-                    {% for actor in program.actors %}
-                        <li><a href="{{ path('actor_show', {'slug':actor.slug}) }}">{{ actor.name }}</a></li>
-                    {% else %}
-                        <li>Aucun acteur pour cette série</li>
-                    {% endfor %}
-                </ul>
+                <div class="casting">
+                    <ul>
+                        {% for actor in program.actors %}
+                            <li><a href="{{ path('actor_show', {'slug':actor.slug}) }}">{{ actor.name }}</a></li>
+                        {% else %}
+                            <li>Aucun acteur pour cette série</li>
+                        {% endfor %}
+                    </ul>
+                </div>
 
             </div>
         </div>
