--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -19,6 +19,12 @@
                     </a>
                 {% endfor %}
             </div>
+
+            <div class="d-flex justify-content-center">
+                <a href="{{ path('wild_index') }}" class="btn">Voir toutes les séries</a>
+            </div>
+
+
         </div>
 
     </div>
