--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="/"><img src="https://zupimages.net/up/19/52/d3e6.png" height="40" class="d-inline-block align-top" alt=""></a>
+    <a class="navbar-brand" href="/"><img src="https://zupimages.net/up/19/52/d3e6.png" height="40"
+                                          class="d-inline-block align-top" alt=""></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -24,12 +25,14 @@
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto align-middle">
                 <li class="nav-item">
-                    <a class="nav-link" href="#" aria-disabled="true">Déconnexion</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#" aria-disabled="true">Jane Doe</a>
+                    {% if app.user %}
+                <li><a href="{{ path('app_logout') }}" class="nav-link">Déconnexion</a></li>
+                <li><a href="#" class="nav-link">{{ app.user.email }}</a></li>
+                {% else %}
+                    <a href="{{ path('app_login') }}" class="nav-link">Connexion</a>
+                {% endif %}
                 </li>
                 <li class="nav-item">
                     <img src="https://www.paroissesaintcyrlecole.fr/wp-content/uploads/2018/10/female-default-profile.png"
