--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,6 +4,7 @@
 
 {% block body %}
     <div class="container">
+
         <form method="post">
             {% if error %}
                 <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -37,7 +38,7 @@
                 </div>
             #}
 
-            <button class="btn btn-lg btn-primary" type="submit">
+            <button class="btn btn-lg" type="submit">
                 Se connecter
             </button>
         </form>
