--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <title>{% block title %}Wild series{% endblock %}</title>
     {% block stylesheets %}
         <link href="https://fonts.googleapis.com/css?family=Orbitron|Notable|Abel&display=swap" rel="stylesheet">
         {{ encore_entry_link_tags('app') }}
