--- a/templates/wild/index.html.twig
+++ b/templates/wild/index.html.twig
@@ -5,17 +5,20 @@
 {% block body %}
 
     <h1>Toutes les séries disponibles : </h1>
+
     <div class="container-fluid home wild-index">
+
         <div class="card-deck justify-content-around">
+
             {% for program in programs %}
                 <div class="flex-wrap">
                     <div class="card" style="width: 18rem;">
                         <a href="{{ path('show_program', {'programName': program.slug }) }}">
-                            <img class="card-img-top" src="{{ program.poster }}" alt="Card image cap">
+                            <img class="card-img-top" src="{{ program.poster }}" alt="Affiche de {{ program.title }}">
                         </a>
-                        <p class="category"
-                           style="background-color: {{ program.category.color }}">
-                            <small>{{ program.category.name }}</small></p>
+                        <p class="category" style="background-color: {{ program.category.color }}">
+                            <small>{{ program.category.name }}</small>
+                        </p>
                         <div class="card-body">
                             <h2 class="card-title">{{ program.title }}</h2>
                             <p class="card-text">{{ program.summary }}</p>
