--- a/templates/wild/episodes.html.twig
+++ b/templates/wild/episodes.html.twig
@@ -8,7 +8,7 @@
 
         <div class="episodes">
             {% for episode in episodes %}
-                <a href="{{ path('show_episode', {'id': episode.id }) }}">
+                <a href="{{ path('show_episode', {'slug': episode.slug }) }}">
                     <h2>Episode {{ episode.number }} : <i>{{ episode.title }}</i></h2>
                 </a>
             {% endfor %}
