--- a/assets/css/episode.scss
+++ b/assets/css/episode.scss
@@ -1,4 +1,5 @@
-.episode .btn btn-primary {
-  background-color: var(--primary); }
-
-/*# sourceMappingURL=episode.css.map */
+.episode {
+  .card {
+    margin: 3rem;
+  }
+}
