--- a/templates/wild/episode.html.twig
+++ b/templates/wild/episode.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="container">
+    <div class="container episode">
         <h1>{{ program.title }}</h1>
         <h2>Saison {{ season.number }}, Episode {{ episode.number }}</h2>
 
@@ -12,8 +12,17 @@
             </div>
         </div>
 
-        <a href="{{ path('show_season', {'id': season.id }) }}" class="btn" role="button">Saison {{ season.number }} de {{ program.title }} </a>
-        <a href="{{ path('show_program', {'programName': program.title }) }}" class="btn" role="button">Détails de {{ program.title }}</a>
+        <div class="card">
+            <div class="card-body">
+                <h3>Commentaires</h3>
+                <p>{{ episode.synopsis }}</p>
+            </div>
+        </div>
+
+        <a href="{{ path('show_season', {'id': season.id }) }}" class="btn" role="button">Saison {{ season.number }}
+            de {{ program.title }} </a>
+        <a href="{{ path('show_program', {'programName': program.title }) }}" class="btn" role="button">Détails
+            de {{ program.title }}</a>
     </div>
 
 {% endblock %}
