--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -2,6 +2,8 @@
 
 {% block body %}
 
+    <img src="https://vonguru-1278.kxcdn.com/wp-content/uploads/2016/12/vonguru_images_cineserie_top_serie_2016_cover-min.jpg" alt="" class="banner mb-3">
+
     <div class="container-fluid home">
 
         <h1><i class="fas fa-star"></i> Nouveautés</h1>
